--- a/docs/interaction/particle_accelerator.mdx
+++ b/docs/interaction/particle_accelerator.mdx
@@ -38,9 +38,32 @@ At higher speeds, the particle can't take tight turns. If the last full 90-degre
 
 **Interactions**
 
-Entities hit by the particle take damage based on the particle's speed. When exiting the guided path, it also harms entities in its path and destroys blocks until momentum is depleted. When two particles collide (from different controllers), they can create new items.
+Entities hit by the particle take damage based on the particle's speed. When exiting the guided path, it also harms entities in its path
+and destroys blocks until momentum is depleted. When two particles collide (from different controllers), they can create new items.
 
-Passing through an accelerator motor speeds up the particle by 1 m/s, requiring the motor to be powered. The power requirement increases with speed. Both particle motors and sensors can be used as straight guides.
+Passing through an accelerator motor speeds up the particle by 1 m/s, requiring the motor to be powered.
+The power requirement increases with speed. Both particle motors and sensors can be used as straight guides.
+
+---
+
+**Tachyons**
+
+When particles collide at high speed, they'll emit energy-dense tachyons. The higher the collision energy, the more energy will be ejected with tachyons. They'll also
+fly farther and there'll be more tachyons at higher speeds.
+
+Tachyon collectors can be used to catch those particles and turn them into energy. The tachyons will always exit in random directions at the collision point. Surrounding
+the entire area in collectors ensures you'll catch them all. If all tachyons are collected, you can get up to 3x the amount of energy that was used to accelerate
+the particles. However for large collisions, a lot of high-energy tachyons will be emitted, quickly filling the capacity of a single collector. Placing the collectors
+further back allows the tachyons to be spread over multiple collectors, so they don't fill up too quickly and get overwhelmed.
+
+<center>
+<ModAsset location="oritech:area/tachyon_catcher" width={500} />
+</center>
+
+The distance the tachyons can reach can be calculated as follows:
+> (pow(collisionEnergy, 0.5) / 2f + 1) / 3
+
+Basically this means that at higher collisions, tachyons will travel further from the point of the collision.
 
 ---
 
@@ -91,3 +114,4 @@ Ender pearls with more than 10000J appear to do the same for the end dimension.
 
 There are unsettling rumors of reckless scientists attempting to bombard these incursion points with speeds that defy known limits,
 aiming to create singularities of their own. However, none have returned to share their findings, leaving their fates shrouded in mystery.
+Sensors are recording a mysterious tachyon stream from the site of the experiment.
