--- a/common/src/main/resources/assets/oritech/lang/pl_pl.json
+++ b/common/src/main/resources/assets/oritech/lang/pl_pl.json
@@ -19,8 +19,8 @@
   "advancements.oritech.exo_chest.description": "Wykonaj napierśnik Exo i chroń swoje wnętrze. Iron Man, kto to?",
   "advancements.oritech.exo_helmet": "Przewaga na starcie",
   "advancements.oritech.exo_helmet.description": "Wykonaj hełm Exo i wyprzedź innych w grze. Umysł nad materią!",
-  "advancements.oritech.drill": "Sierżant wiertarka",
-  "advancements.oritech.drill.description": "Zdobądź ręczną wiertarkę i zacznij wiercić w ziemi. Kop głęboko, żołnierzu!",
+  "advancements.oritech.drill": "Sierżant drilowiec",
+  "advancements.oritech.drill.description": "Zdobądź ręczne wiertło i zacznij wiercić w ziemi. Kop głęboko, żołnierzu!",
   "advancements.oritech.resource_node": "Błyszczące nagrody",
   "advancements.oritech.resource_node.description": "Znajdź węzeł zasobów. Nieskończone bogactwo czeka!",
   "advancements.oritech.centrifuge": "Doktor kręcący",
@@ -97,7 +97,7 @@
   "tooltip.oritech.addon_crop_desc": "Dotyczy Block Destroyer i Enderic Laser. Pomija nieurosłe uprawy lub zwierzęta",
   "tooltip.oritech.addon_proxy_desc": "Umożliwia dostęp do określonych slotów magazynowych",
   "tooltip.oritech.addon_proxy_select": "Wybierz docelowy slot proxy",
-  "tooltip.oritech.addon_quarry_desc": "Dotyczy niszczyciela bloków i Enderic Laser. Zwiększa rozmiar obszaru roboczego",
+"tooltip.oritech.addon_quarry_desc": "Dotyczy niszczyciela bloków i Enderic Laser. Zwiększa rozmiar obszaru roboczego",
   "tooltip.oritech.addon_hunter_desc": "Dotyczy Enderic Laser. Celuje w istoty żywe",
   "tooltip.oritech.addon_redstone_desc": "Pozwala na dalszą konfigurację redstone i komparatora",
   "tooltip.oritech.addon_capacity_desc": "Pojemność energii ",
@@ -311,7 +311,7 @@
   "block.oritech.creative_tank_block": "Kreatywny Zbiornik",
   "block.oritech.placer_block": "Blok Umieszczacza",
   "block.oritech.destroyer_block": "Blok Niszczyciela",
-  "block.oritech.fertilizer_block": "Blok Nawozu",
+ "block.oritech.fertilizer_block": "Blok Nawozu",
   "block.oritech.pump_block": "Pompa",
   "block.oritech.machine_core_1": "Prymitywny Rdzeń Maszyny",
   "block.oritech.machine_core_2": "Podstawowy Rdzeń Maszyny",
@@ -390,7 +390,7 @@
       "color": "#cc66ff"
     }
   ],
-  "block.oritech.spawner_controller_block": "Kontroler Spawnera",
+   "block.oritech.spawner_controller_block": "Kontroler Spawnera",
   "block.oritech.spawner_cage_block": "Klatka Spawnera",
   "block.oritech.wither_crop_block": "Kwiaty Duszy",
   "block.oritech.accelerator_ring": "Pierścień Kierujący Akceleratora Cząsteczek",
@@ -490,7 +490,7 @@
   "item.oritech.exo_leggings": "Legginsy Egzo",
   "item.oritech.exo_boots": "Buty Egzo",
   "item.oritech.chainsaw": "Piła Łańcuchowa",
-  "item.oritech.hand_drill": "Wiertarka Ręczna",
+  "item.oritech.hand_drill": "Wiertło Ręczna",
   "item.oritech.jetpack": "Plecak Odrzutowy",
   "item.oritech.exo_jetpack": "Plecak Odrzutowy Egzo",
   "item.oritech.jetpack_elytra": "Wzmocniona Elytra",
@@ -559,7 +559,7 @@
   "text.oritech.accelerator.ui.exited.nogate": "Współrzędne %s\nBrak bramy w zasięgu\nZasięg: %s",
   "text.config.oritech-config.title": "Ustawienia Oritech",
   "text.config.oritech-config.section.machineSettings": "Maszyny",
-  "text.config.oritech-config.category.processingMachines": "Maszyny Przetwarzające",
+   "text.config.oritech-config.category.processingMachines": "Maszyny Przetwarzające",
   "text.config.oritech-config.option.processingMachines.machineFrameMaxLength": "Maksymalna Długość Ramy Maszyny",
   "text.config.oritech-config.category.processingMachines.assemblerData": "Dane Zestawiacza",
   "text.config.oritech-config.option.processingMachines.assemblerData.energyCapacity": "Pojemność Energetyczna",
@@ -663,7 +663,7 @@
   "text.config.oritech-config.option.smallEnergyStorage.maxEnergyExtraction": "Maksymalne Wydobywanie Energii",
   "text.config.oritech-config.option.smallEnergyStorage.energyPerTick": "Energia Na Tick",
   "text.config.oritech-config.category.largeEnergyStorage": "Duże Magazynowanie Energii",
-  "text.config.oritech-config.option.largeEnergyStorage.energyCapacity": "Pojemność Energetyczna",
+ "text.config.oritech-config.option.largeEnergyStorage.energyCapacity": "Pojemność Energetyczna",
   "text.config.oritech-config.option.largeEnergyStorage.maxEnergyInsertion": "Maksymalne Wstawianie Energii",
   "text.config.oritech-config.option.largeEnergyStorage.maxEnergyExtraction": "Maksymalne Wydobywanie Energii",
   "text.config.oritech-config.option.largeEnergyStorage.energyPerTick": "Energia Na Tick",
@@ -680,7 +680,7 @@
   "text.config.oritech-config.category.elytraJetpack": "Plecak Odrzutowy Elytra",
   "text.config.oritech-config.category.exoElytraJetpack": "Plecak Odrzutowy Exo Elytra",
   "text.config.oritech-config.category.exoChestplate": "Zbroja Exo",
-  "text.config.oritech-config.category.basicDrill": "Podstawowy Wiertło",
+  "text.config.oritech-config.category.basicDrill": "Podstawowe Wiertło",
   "text.config.oritech-config.category.chainSaw": "Piła Łańcuchowa",
   "text.config.oritech-config.option.charger.energyCapacity": "Pojemność Energetyczna Ładowarki",
   "text.config.oritech-config.option.charger.maxEnergyInsertion": "Maksymalne Wstawianie Energii Ładowarki",
@@ -719,7 +719,7 @@
   "text.config.oritech-config.option.chainSaw.energyCapacity": "Pojemność Energetyczna Piły Łańcuchowej",
   "text.config.oritech-config.option.chainSaw.energyUsage": "Zużycie Energii Piły Łańcuchowej",
   "text.config.oritech-config.option.chainSaw.chargeSpeed": "Prędkość Ładowania Piły Łańcuchowej",
-  "text.config.oritech-config.section.arcane": "Arkany",
+ "text.config.oritech-config.section.arcane": "Arkany",
   "text.config.oritech-config.option.enchanterCostMultiplier": "Mnożnik Kosztu Duszy Enchantora",
   "text.config.oritech-config.option.catalystBaseSouls": "Podstawowa Pojemność Dusz Katalizatora",
   "text.config.oritech-config.option.catalystRFPerSoul": "RF/t za poziom zwiększenia pojemności duszy katalizatora",
@@ -749,5 +749,37 @@
   "text.config.oritech-config.section.blackHole": "Czarna Dziura",
   "text.config.oritech-config.option.pullTimeMultiplier": "Mnożnik Czasu Przyciągania Czarnej Dziury",
   "text.config.oritech-config.option.pullRange": "Zasięg Przyciągania Czarnej Dziury",
-  "text.config.oritech-config.option.idleWaitTicks": "Czasy Oczekiwania Czarnej Dziury"
+  "text.config.oritech-config.option.idleWaitTicks": "Czasy Oczekiwania Czarnej Dziury",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energia tachionów z czarnych dziur",
+
+  "block.oritech.fluxite_block": "Blok Fluxitu",
+  "block.oritech.electrum_block": "Blok Elektrumu",
+  "fluid.oritech.still_fuel": "Turbopaliwo",
+  "block.oritech.raw_platinum_block": "Blok Surowej Platyny",
+  "block.oritech.still_fuel_block": "Turbopaliwo",
+  "block.oritech.still_steam_block": "Para",
+  "item.oritech.still_oil_bucket": "Wiadro Surowej Ropy",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Mnożnik RF Kolizji Cząstek Tachionów",
+  "text.config.oritech-config.option.processingMachines.pulverizerData.energyPerTick": "Energia na Tik",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Pojemność Energii Kolektora Tachionów",
+  "tooltip.oritech.pipe_booster": "Zwiększa prędkość ekstrakcji płynów lub przedmiotów w rurze za nim",
+  "item.oritech.still_steam_bucket": "Wiadro z Parą",
+  "block.oritech.raw_nickel_block": "Blok Surowego Niklu",
+  "block.oritech.steel_block": "Blok Stali",
+  "block.oritech.particle_collector_block": "Absorber Tachionów",
+  "block.oritech.silicon_block": "Blok Krzemu",
+  "fluid.oritech.still_steam": "Para",
+  "block.oritech.nickel_block": "Blok Niklu",
+  "block.oritech.plastic_block": "Blok Plastiku",
+  "block.oritech.energite_block": "Blok Energitu",
+  "block.oritech.platinum_block": "Blok Platyny",
+  "block.oritech.biosteel_block": "Blok Biostali",
+  "block.oritech.duratium_block": "Blok Duratium",
+  "block.oritech.still_oil_block": "Surowa Ropa",
+  "item.oritech.still_fuel_bucket": "Wiadro z Turbopaliwem",
+  "block.oritech.biomass_block": "Blok Biomasy",
+  "block.oritech.pipe_booster_block": "Wzmacniacz Rur",
+  "fluid.oritech.still_oil": "Ropa",
+  "block.oritech.adamant_block": "Blok Adamantu",
+  "tooltip.oritech.particle_collector": "Zbiera energię tachionów emitowaną przez kolizje cząstek."
 }
